Overflow fixed

--- a/style.css
+++ b/style.css
@@ -6,12 +6,14 @@
 
 html {
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
   font-family: "Inter", sans-serif;
   font-weight: 400;
   color: #5d5f79;
+  overflow-x: hidden;
 }
 
 p {
